# Refactoring-example-cpp

./: CMakeLists.txt  README.md
front-end/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  childrens-price.cpp  childrens-price.hpp  customer.cpp  customer.hpp  iprice.hpp  movie.cpp  movie.hpp  new-release-price.cpp  new-release-price.hpp  price.cpp  price.hpp  regular-price.cpp  regular-price.hpp  rental.cpp  rental.hpp
test/: CMakeLists.txt  check-same.hpp  html-statement.cpp  statement-test.cpp  string-manipulation.cpp  string-manipulation.hpp
